Fails closed if accountsservice isn't available on the bus
After enabling libmalcontent support in Debian's flatpak package, I got a bug report that all Flatpak apps fail to launch with:
error: The name org.freedesktop.Accounts was not provided by any .service files
for a user who presumably doesn't have accountsservice
installed (or malcontent
installed, because malcontent
depends on accountsservice
).
Is accountsservice intended to be a hard dependency of the libmalcontent shared library? Presumably not?
Since malcontent is not intended to be a serious security boundary, probably accountsservice's nonexistence should lead to MCT_MANAGER_ERROR_DISABLED
, the same as absence of the com.endlessm.ParentalControls.AppFilter
interface? Are there other errors for which it's desirable to fail open? Or perhaps the policy should even be to fail open unless there is reasonable evidence that the error isn't of the class "something is missing or broken"?
I also wonder whether Flatpak should "fail open" on various errors involving libmalcontent, but I'll open a separate Flatpak issue for that.
For libmalcontent-ui, it looks as though the reference malcontent-control
app gracefully disables itself if accountsservice
is not available, and it seems reasonable for other libmalcontent-ui users to do the same.